# lagransala

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  flake.nix  pyproject.toml  run
.github/workflows/: test.yml
seeds/: content_scrapers.json  paginations.json  venues.json
src/lagransala/: __main__.py
src/lagransala/applications/: __init__.py
src/lagransala/applications/event_discovery/: __init__.py  __main__.py  get_venue_content_scraper.py  get_venue_pagination.py
src/lagransala/extractor/domain/: __init__.py  event_data.py  event_extractor.py
src/lagransala/extractor/infrastructure/: __init__.py  instructor_event_extractor.py
src/lagransala/schedule/application/: __init__.py  seed_venues.py
src/lagransala/schedule/domain/: __init__.py  event.py  venue.py
src/lagransala/schedule/infrastructure/: __init__.py  sqlmodel_engine.py
src/lagransala/scraper/application/: __init__.py  crawler.py  pagination_elements.py  pagination_urls.py
src/lagransala/scraper/domain/: __init__.py  content_scraper.py  content_scraper_repo.py  crawl_result.py  crawler.py  pagination.py  (+1 more)
tests/: test_main.py
tests/applications/event_discovery/: conftest.py  test_get_venue_content_scraper.py  test_get_venue_pagination.py  test_main.py
tests/extractor/domain/: test_event_data.py  test_event_extractor.py
tests/extractor/infrastructure/: test_instructor_event_extractor.py
tests/schedule/: conftest.py
tests/schedule/application/: test_seed_venues.py
tests/schedule/domain/: test_event.py  test_venue.py
tests/schedule/infrastructure/: test_sqlmodel_engine.py
tests/scraper/application/: test_crawler.py  test_pagination_elements.py
tests/scraper/domain/: test_pagination.py
tests/scraper/infrastructure/: test_aiohttp_crawler.py  test_json_content_scraper_repo.py  test_json_pagination_repo.py
tests/shared/application/: conftest.py  helpers.py  test_build_sqlmodel_type.py  test_caching.py  test_markdown.py  test_urls.py
tests/shared/domain/: test_coroutine_with_data.py
tests/shared/infrastructure/: test_aiohttp_fetcher.py  test_file_cache_backend.py  test_initialize_sqlmodel.py  test_memory_cache_backend.py
(+17 files in other folders)
