[project]
name = "lagransala"
version = "0.2.0"
description = "Cartelera"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "beautifulsoup4>=4.13.4",
    "crawl4ai>=0.6.0",
    "jinaai>=0.2.10",
    "pydantic>=2.11.3",
    "urlextract>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
lagransala= "lagransala.__main__:main"

[dependency-groups]
dev = [
    "black",
    "commitizen",
    "flake8",
    "isort",
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.commitizen]
version_provider = "uv"
tag_format =  "v${version}"
version_scheme = "semver"
update_changelog_on_bump = true
