[project]
name = "lagransala"
version = "0.4.0"
description = "Cartelera"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "aiolimiter>=1.2.1",
    "beautifulsoup4>=4.13.4",
    "crawl4ai>=0.6.0",
    "instructor>=1.7.9",
    "jinaai>=0.2.10",
    "litellm>=1.67.1",
    "markdownify>=1.1.0",
    "pydantic>=2.11.3",
    "sqlmodel>=0.0.24",
    "urlextract>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
lagransala= "lagransala.__main__:main"

[dependency-groups]
dev = [
    "black",
    "commitizen",
    "flake8",
    "isort",
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "aioresponses",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
addopts = "-ra --cov=src"

[tool.commitizen]
version_provider = "uv"
tag_format =  "v${version}"
version_scheme = "semver"
update_changelog_on_bump = true

[tool.isort]
profile = "black"

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]
omit = [
    "*/.local/*",
    "/usr/*",
    "/nix/store/*",
    ]
